🐯🍎 Checkpoint ./index.html:74308084/747 ./style.css:74308084/135 ./.glitch-assets:74308084/351

--- a/style.css
+++ b/style.css
@@ -11,3 +11,14 @@ body
   --font-family-header: "HK Grotesk";
   text-align:center
 }
+
+img 
+{
+  transition : .5s ease-in;
+  filter : grayscale(100%)
+}
+
+img::hover
+{
+  filter : grayscale(0%)
+}
