--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body
 {
-  background-image:url("");
+  background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/iceberg-5163649_1280.jpg");
   color:#1616B5;
   --color-text-header: #2800FF;
   --color-primary: #FFFF00;
@@ -22,7 +22,30 @@ img::hover
   filter : grayscale(0%)
 }
 
-tit1
-{
-   
+/* Container */
+.resume-container {
+    display: flex;
+    align-items: flex-start;
+    background: rgba(255, 255, 255, 0.9);
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    max-width: 1100px;
+    /* Increased width */
+    width: 100%;
+    min-height: 400px;
+    /* Adding some minimum height to make sure the box is large */
+}
+
+/* Image Section */
+.image-section img {
+    width: 400px;
+    /* Larger image */
+    height: 200px;
+    /* Larger image */
+    border-radius: 12px;
+    object-fit: cover;
+    border: 4px solid white;
+    margin-right: 30px;
+    /* More space between image and text */
 }
