🏤🍴 Checkpoint ./style.css:74308084/26 ./index.html:74308084/118

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body
 {
   background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Photographe-paysage-clermont-ferrand.jpg?v=1738577297124");
-  color:#058fd0;
+  color:#e1a000;
   --color-text-header: #2800FF;
   --color-primary: #FFFF00;
   --wrapper-height: 87vh;
