--- a/style.css
+++ b/style.css
@@ -49,4 +49,12 @@ img::hover
     border: 2px solid white;
     margin-right: 10px;
     /* More space between image and text */
+  flex-direction:column
+}
+
+.resume-container2 {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    /* Ensure text section takes available space */
 }
