--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body
   --image-margin: 3rem;
   --font-family: "HK Grotesk";
   --font-family-header: "HK Grotesk";
-  text-align:center
+  text-align:center;
 }
 
 img 
@@ -17,7 +17,7 @@ img
   transition : .5s ease-in;
   filter : grayscale(100%)
 }
-img::hover
+img:hover
 {
   filter : grayscale(0%)
 }
@@ -55,6 +55,7 @@ img::hover
 .resume-container2 {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
     /* Ensure text section takes available space */
+  padding:10px;
+  margin-right:30px;
 }
