--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ img:hover
 .resume-container {
     display: flex;
     align-items: flex-start;
-    background: rgba(255, 255, 255, 0.9);
+    background-image: url("");
     padding: 40px;
     border-radius: 12px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
@@ -59,3 +59,5 @@ img:hover
   padding:10px;
   margin-right:30px;
 }
+
+
