--- a/style.css
+++ b/style.css
@@ -23,7 +23,12 @@ img:hover
   filter : grayscale(0%)
 }
 
-/* Container */
+.titre
+{
+  font-size:20
+  color:
+}
+/* Container 1*/
 .resume-container {
     display: flex;
     align-items: flex-start;
@@ -38,26 +43,31 @@ img:hover
   color:#1616B5;
 }
 
-/* Image Section */
 .image-section img {
     width: 400px;
-    /* Larger image */
     height: 200px;
-    /* Larger image */
     border-radius: 10px;
     object-fit: cover;
     border: 2px solid white;
     margin-right: 10px;
-    /* More space between image and text */
+
   flex-direction:column
 }
 
 .resume-container2 {
     display: flex;
     flex-direction: column;
-    /* Ensure text section takes available space */
   padding:10px;
   margin-right:30px;
 }
 
+/*2éme conteneur*/
+.resume-container3
+{
+  
+}
 
+.image-section2
+{
+  
+}
