--- a/style.css
+++ b/style.css
@@ -23,10 +23,15 @@ img:hover
   filter : grayscale(0%)
 }
 
-.titre
+.texte1
 {
-  font-size:20
-  color:
+  font-size:15;
+  color:white;
+}
+.twt1
+{
+  font-size:20;
+  color:#1616B5;
 }
 /* Container 1*/
 .resume-container {
@@ -40,7 +45,6 @@ img:hover
     max-width: 1200px;
     width: 100%;
     min-height: 400px;
-  color:#1616B5;
 }
 
 .image-section img {
