--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ img:hover
 {
   display: flex;
     align-items: flex-start;
-    background-image: url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/OIP.jpg?v=1738692161799");
+    background-image :url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/t%C3%A9l%C3%A9charger.jpg?v=1738693057696.jpg")
     background-repeat:no-repeat ;
   padding: 40px;
     border-radius: 20px;
@@ -90,4 +90,12 @@ img:hover
     margin-right: 10px;
 
   flex-direction:column
+}
+
+.resume-container4
+{
+  display: flex;
+    flex-direction: column;
+  padding:10px;
+  margin-right:30px;
 }
