🍯🚂 Checkpoint ./.glitch-assets:74308084/440 ./style.css:74308084/605 ./titanic.css:74308084/54 ./Titan.css:74308084/50

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ img:hover
 {
   display: flex;
     align-items: flex-start;
-    background-image :url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/t%C3%A9l%C3%A9charger.jpg?v=1738693057696.jpg")
+    background-image :url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/t%C3%A9l%C3%A9charger.jpg?v=1738694807706");
     background-repeat:no-repeat ;
   padding: 40px;
     border-radius: 20px;
