🍫⏱ Checkpoint ./titanic.html:74308084/1480 ./titanic.css:74308084/613

--- a/titanic.css
+++ b/titanic.css
@@ -6,3 +6,17 @@ header
 {
 
 }
+
+.resume-containerT1
+{
+  display: flex;
+  align-items: flex-start;
+   background-color:red;
+    background-repeat:no-repeat ;
+  padding: 40px;
+    border-radius: 20px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    max-width: 1200px;
+    width: 100%;
+    min-height: 400px;
+}
