--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
+/*accés rapides Chapitres*/
+.rechercheP1
+{
+  display: flex;
+  align-items: flex-start;
+  max-width: 1200px;
+  flex-direction:linear;
+  gap:20px;
+}
+.rechercheP2
+{
+  display:flex;
+  align-items:flex-start;
+  background-color:#f0c653;
+  color:#ff0000;
+  padding:10px;
+  min-width:10px;
+  min-height:10px;
+  margin-top:20px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+/*body*/
 body
 {
   background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Photographe-paysage-clermont-ferrand.jpg?v=1738577297124");
