🐘🤗 Checkpoint ./Titan.css:74308084/16 ./index.html:74308084/70 ./Titan.html:74308084/18 ./style.css:74308084/266

--- a/Titan.css
+++ b/Titan.css
@@ -8,8 +8,9 @@
 {
   display: flex;
   align-items: flex-start;
-    max-width: 1200px;
+  max-width: 1200px;
   flex-direction:linear;
+  gap:20px;
 }
 .recherche2
 {
