🎳🏙 Checkpoint ./titanic.css:74308084/28 ./Titan.css:74308084/28 ./style.css:74308084/348 ./index.html:74308084/164

--- a/style.css
+++ b/style.css
@@ -47,7 +47,17 @@ img:hover
 {
   filter : grayscale(0%)
 }
-
+/*titres*/
+.titre
+{
+  font-size:20px;
+  text-shadow: 3px 4px 4px rgba(0, 0, 0, 0.4);
+}
+/*entre header et div-box*/
+.intro
+{
+  color:;
+}
 .texte1
 {
   font-size:15;
@@ -59,11 +69,7 @@ img:hover
   color:#1616B5;
 }
 
-/*texte*/
-.intro
-{
-  color:black;
-}
+
 
 
 
