--- a/Titan.css
+++ b/Titan.css
@@ -9,6 +9,7 @@
   display: flex;
   align-items: flex-start;
   max-width: 1200px;
+  padding:20px;
   flex-direction:linear;
   gap:20px;
 }
@@ -17,7 +18,7 @@
   display:flex;
   align-items:flex-start;
   background-color:#f0c653;
-  color:#ff0000;
+  color:#f3f3f3;
   padding:10px;
   min-width:10px;
   min-height:10px;
