--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 .rechercheP1
 {
   display: flex;
-  align-items: flex-start;
+  align-items:center;
   padding:20px;
   max-width: 1200px;
   flex-direction:linear;
@@ -50,7 +50,7 @@ img:hover
 /*titres*/
 .titre
 {
-  font-size:50px;
+  font-size:40px;
   text-shadow: 3px 4px 4px rgba(0, 0, 0, 0.5);
 }
 /*entre header et div-box*/
