--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 .rechercheP1
 {
   display: flex;
-  align-items:center;
-  padding:20px;
+  align-items: flex-start;
   max-width: 1200px;
   flex-direction:linear;
   gap:20px;
+  justify-content:center;
 }
 .rechercheP2
 {
