--- a/titanic.css
+++ b/titanic.css
@@ -1,56 +1,85 @@
-.header
-{
-  color:white;
-}
-
-/*accés rapides Chapitres*/
-.rechercheT1
-{
+.container {
   display: flex;
-  align-items: flex-start;
-  max-width: 1200px;
-  justify-content:center;
-  flex-direction:linear;
-  gap:20px;
+  flex-direction: column;
 }
-.rechercheT2
-{
-  display:flex;
-  align-items:flex-start;
-  background-color:#f0c653;
-  color:#f3f3f3;
-  padding:10px;
-  min-width:10px;
-  min-height:10px;
-  margin-top:20px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
+
+.container-body {
+  margin-left: 15%;
+  margin-right: 15%;
+  display: flex;
+  flex-direction: column;
+}
+
+a {
+  text-decoration: none; 
+  color: inherit;         
+  cursor: pointer;        
+}
+
+a:hover {
+  text-decoration: none; 
+  color: inherit;            
 }
 
 
-
-
-body
-{
-  background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Photographe-paysage-clermont-ferrand.jpg?v=1738577297124");
-  color:#e1a000;
-  --color-text-header: #2800FF;
-  --color-primary: #FFFF00;
-  --wrapper-height: 87vh;
-  --image-max-width: 300px;
-  --image-margin: 3rem;
-  --font-family: "HK Grotesk";
-  --font-family-header: "HK Grotesk";
-  text-align:center;
-  background-repeat:no-repeat ;
+.header {
+  background-image: URL("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Titanic_01.jpg?v=1739306737039");
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
 }
-.texte1
-{
-  font-size:15;
-  color:white;
+
+.upper {
+  flex: 5;
+  display: flex;
+  justify-content: end; 
+  align-items: start; 
 }
-.twt1
-{
-  font-size:20;
-  color:#1616B5;
+
+.lower {
+  flex: 1;
+  display: flex;
+  align-content: center;
+  justify-content: center
+}
+
+.lien {
+  color: #b8860b;
+  margin: 16px;
+  font-family: "Bodoni Moda", serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.lien:hover {
+    border-top: 2px solid #b8860b;
+    border-bottom: 2px solid #b8860b;
+    cursor: pointer
+}
+
+.titre {
+  font-size: 45px;
+  font-family: "Bodoni Moda", serif;
+  font-weight: 600;
+  font-style: normal;
+  margin-top: 5%;
+  margin-right: 5%
+}
+
+h2 {
+  color: #b8860b; 
+  font-size: 24px;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.6;
+}
+
+.highlight {
+  font-weight: bold;
+  color: #b8860b; 
 }
