⚽️🖇 Checkpoint ./Titan.html:74308084/147:74483170/261 ./titanic.html:74308084/171:74483170/458 ./titanic.css:74308084/70:74483170/63 ./Titan.css:74308084/33:74483170/47 ./style.css:74483170/144

--- a/Titan.css
+++ b/Titan.css
@@ -1,7 +1,4 @@
-.acceuil
-{
-  text-align:center;
-}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -23,6 +20,11 @@ a {
 a:hover {
   text-decoration: none; 
   color: inherit;            
+}
+
+.home {
+  margin-top: 1%;
+  margin-left: 2%
 }
 
 
