--- a/titanic.css
+++ b/titanic.css
@@ -1,3 +1,5 @@
+
+
 .container {
   display: flex;
   flex-direction: column;
@@ -37,6 +39,11 @@ a:hover {
   display: flex;
   justify-content: end; 
   align-items: start; 
+}
+
+.home {
+  margin-top: 1%;
+  margin-left: 2%
 }
 
 .lower {
