👑🐋 Checkpoint ./Page-Acceuil-site.html:74308084/4260 ./index.html:74308084/2117 ./style.css:74308084/1642 ./.glitch-assets:74308084/839 ./page-accueil-site.css:74308084/306

--- a/page-accueil-site.css
+++ b/page-accueil-site.css
@@ -27,6 +27,10 @@
 body
 {
   background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Photographe-paysage-clermont-ferrand.jpg?v=1738577297124");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
   color:#e1a000;
   text-align:center;
   background-size: cover;
