🎖🎲 Checkpoint ./Page-Acceuil-site.html:74308084/3200:74872078/5 ./tit1.html:74872078/884 ./page-accueil-site.css:74308084/442 ./.glitch-assets:74872078/1976

--- a/page-accueil-site.css
+++ b/page-accueil-site.css
@@ -23,6 +23,11 @@
   
 }
 
+header
+{
+  background-color:pink;
+  min-height:100px;
+}
 /*body*/
 body
 {
@@ -33,9 +38,6 @@ body
   width: 100%;
   color:#e1a000;
   text-align:center;
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
   margin: 0;
 }
 
@@ -57,7 +59,7 @@ img:hover
 
 .texte1
 {
-  font-size:15;
+  font-size:20px;
   color:white;
 }
 .twt1
@@ -152,4 +154,12 @@ boutton
     flex-direction: column;
   padding:10px;
   margin-right:30px;
+}
+
+
+
+.highlight
+{
+  font-weight: bold;
+  color: #b8860b; 
 }
