--- a/titanic.css
+++ b/titanic.css
@@ -84,9 +84,17 @@ h2 {
 p {
   font-size: 18px;
   line-height: 1.6;
+  color:white;
+  font-size:15px;
 }
 
 .highlight {
   font-weight: bold;
   color: #b8860b; 
+}
+
+body
+{
+  background-color:black;
+  font-family:"Courier",serif;
 }
