--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ header
 /*body*/
 body
 {
-  color:black;
+  color:white;
+  background-color:black;
   text-align:center;
   background-size: cover;
   background-position: center;
