🌄👨‍👨‍👦 Checkpoint ./.glitch-assets:74872078/373 ./style.css:74872078/183 ./index.html:74872078/822

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 
 header
 {
-  background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/white%20star.jpg?v=1740607911477");
+  background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/fond.avif?v=1740608006601");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
