--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body
 
 .texte2
 {
-  ...
+  font-size:30px;
 }
 
 
@@ -76,5 +76,6 @@ body
   min-height:10px;
   margin-top:20px;
   border-radius: 10px;
+  flex-direction:column;
 }
   
