🐄📮 Checkpoint ./style.css:74308084/1055 ./index.html:74308084/8

--- a/style.css
+++ b/style.css
@@ -70,15 +70,6 @@ body
   justify-content:center;
   
 }
-.p2
-{
-   display: flex;
-  align-items: flex-start;
-  max-width: 1320px;
-  flex-direction:linear;
-  gap:20px;
-  justify-content:center;
-}
 .page
 {
   display:flex;
@@ -93,14 +84,28 @@ body
 .pt
 {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   max-width: 1320px;
   flex-direction:linear;
-  gap:20px;
+  gap:60px;
   justify-content:center;
   background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanicolympique.jpg?v=1740506702836");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100%;
+  width: 95%;
+}
+.p2
+{
+   display: flex;
+  align-items:center;
+  max-width: 1320px;
+  flex-direction:linear;
+  gap:60px;
+  justify-content:center;
+  background-image:url("");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 95%;
 }
