👨‍❤️‍💋‍👨✈️ Checkpoint ./Page-Minerve.html:74308084/44 ./Page-Olympique.html:74308084/16 ./Page-Britanique.html:74308084/17 ./page-minerve.css:74308084/168 ./page-britanique.css:74308084/194 ./Page-olympique.css:74308084/258

--- a/Page-olympique.css
+++ b/Page-olympique.css
@@ -38,3 +38,12 @@ body
 {
   
 }
+.titre {
+  font-size: 45px;
+  font-family: "Bodoni Moda", serif;
+  font-weight: 600;
+  font-style: normal;
+  margin-top: 5%;
+  margin-right: 5%;
+  text-align:center;
+}
