--- a/page-britanique.css
+++ b/page-britanique.css
@@ -36,5 +36,14 @@ header
 
 body
 {
-  
+  text-align:center;
+}
+.titre {
+  font-size: 45px;
+  font-family: "Bodoni Moda", serif;
+  font-weight: 600;
+  font-style: normal;
+  margin-top: 5%;
+  margin-right: 5%;
+  text-align:center;
 }
