--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+.titre {
+  font-size: 45px;
+  font-family: "Bodoni Moda", serif;
+  font-weight: 800;
+  font-style: normal;
+  margin-top: 5%;
+  color: black
+}
+
 /*accés pages*/
 .rechercheP1
 {
@@ -21,6 +30,24 @@
   
 }
 
+a {
+  text-decoration: none;
+}
+
+.lien {
+  color: black;
+  margin: 16px;
+  font-family: "Bodoni Moda", serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.lien:hover {
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    cursor: pointer
+}
+
 header
 {
   background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/fond.avif?v=1740608006601");
@@ -28,13 +55,13 @@ header
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  color:;
 }
 /*body*/
 body
 {
-  color:black;
-  background-color:white;
+  color:white;
+  font-family:"Courier",serif;
+  background-color:black;
   text-align:center;
   background-size: cover;
   background-position: center;
@@ -43,7 +70,9 @@ body
 }
 .texte1
 {
-  font-size:20px;
+  margin: 40px;
+  margin-left: 300px;
+  margin-right: 300px;
 }
 .truc1
 {
@@ -54,19 +83,15 @@ body
 .texte2
 {
   font-size:30px;
-  color:;
   text-decoration:underline;
 }
-
-
 
 .p
 {
   display: flex;
   align-items:center;
-  max-width: 1320px;
   flex-direction:column;
-  gap:20px;
+  gap:50px;
   justify-content:center;
   
 }
@@ -80,38 +105,47 @@ body
   margin-top:20px;
   border-radius: 10px;
   flex-direction:column;
+  gap: 16px
 }
-.pt
-{
+.pt, .p2 {
+  position: relative;
+  border-radius: 4px;
   display: flex;
   align-items: center;
   max-width: 1320px;
-  flex-direction:linear;
-  gap:60px;
-  justify-content:center;
-  background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanicolympique.jpg?v=1740506702836");
+  flex-direction: row;
+  justify-content: center;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   width: 95%;
-  color:white;
-}
-.p2
-{
-   display: flex;
-  align-items:center;
-  max-width: 1320px;
-  flex-direction:linear;
-  gap:200px;
-  justify-content:center;
-  background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/fondg.jpg?v=1740694849284");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 95%;
-  color:white;
+  color: white;
 }
 
+.pt::before, .p2::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+  border-radius: 4px;
+  z-index: 1;
+}
+
+.pt > *, .p2 > * {
+  position: relative;
+  z-index: 2;
+}
+
+.pt {
+  background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanicolympique.jpg?v=1740506702836");
+}
+
+.p2 {
+  background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/fondg.jpg?v=1740694849284");
+}
 
 .credit
 {
