--- a/titanic.css
+++ b/titanic.css
@@ -1,5 +1,3 @@
-
-
 .container {
   display: flex;
   flex-direction: column;
@@ -88,6 +86,7 @@ p
   color:white;
   font-size:15px;
   text-align:center;
+  text-align: justify;
 }
 
 .highlight {
@@ -99,6 +98,7 @@ body
 {
   background-color:black;
   font-family:"Courier",serif;
+  margin: 0
 }
 
 td
@@ -114,4 +114,32 @@ td
 .link
 {
   color:blue;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse; /* Fusionne les bordures des cellules */
+  font-family: Arial, sans-serif;
+  color: #333; /* Couleur du texte */
+}
+
+th, td {
+  padding: 12px 15px; /* Espacement interne des cellules */
+  text-align: left; /* Alignement du texte à gauche */
+  border-bottom: 1px solid white; /* Ligne blanche en bas de chaque cellule */
+}
+
+th {
+  background-color: #444; /* Couleur de fond de l'en-tête */
+  color: white; /* Couleur du texte de l'en-tête */
+  font-weight: bold; /* Texte en gras pour les en-têtes */
+}
+
+tr:hover {
+  background-color: #b8870b7e; /* Changement de couleur au survol */
+}
+
+/* Optionnel : Ajouter une bordure autour du tableau */
+table {
+  border: 1px solid white;
 }
