--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ body
   background-repeat: no-repeat;
   width: 95%;
   color: white;
+  gap:60px;
 }
 
 .pt::before, .p2::before {
@@ -129,7 +130,7 @@ body
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+  background: rgba(0, 0, 0, 0.5);
   border-radius: 4px;
   z-index: 1;
 }
