💼☃️ Checkpoint ./.glitch-assets:74872078/393 ./Page-Olympique.html:74872078/481 ./Page-olympique.css:74872078/132

--- a/Page-olympique.css
+++ b/Page-olympique.css
@@ -24,14 +24,14 @@
 
 header
 {
-  background-image:url("");
+  background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/olymacceuil.jpg?v=1740777397451");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
   
   background-color:pink;
-  min-height:250px;
+  min-height:400px;
 }
 
 body
