🚛🍵 Checkpoint ./Page-Olympique.html:74872078/620 ./Page-olympique.css:74872078/336

--- a/Page-olympique.css
+++ b/Page-olympique.css
@@ -47,3 +47,11 @@ body
   margin-right: 5%;
   text-align:center;
 }
+.super-grand-titre {
+    font-size: 4em;
+    font-weight: bold;
+    color: #b8860b; 
+}
+.color {
+   color: #b8860b; 
+}
