--- a/Page-olympique.css
+++ b/Page-olympique.css
@@ -1,43 +1,73 @@
-.rechercheP1
-{
+.container {
   display: flex;
-  align-items: flex-start;
-  max-width: 1320px;
-  flex-direction:linear;
-  gap:20px;
-  justify-content:center;
-}
-.rechercheP2
-{
-  display:flex;
-  align-items:flex-start;
-  background-color:#f0c653;
-  color:#f3f3f3;
-  padding:10px;
-  min-width:10px;
-  min-height:10px;
-  margin-top:20px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  
+  flex-direction: column;
 }
 
-header
-{
-  background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/olymacceuil.jpg?v=1740777397451");
-           background-size: cover;
+.container-body {
+  margin-left: 15%;
+  margin-right: 15%;
+  display: flex;
+  flex-direction: column;
+}
+
+a {
+  text-decoration: none; 
+  color: inherit;         
+  cursor: pointer;        
+}
+
+a:hover {
+  text-decoration: none; 
+  color: inherit;            
+}
+
+.home {
+  margin-top: 1%;
+  margin-left: 2%
+}
+
+
+.header {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/image.webp?v=1740903056305");
+  height: 300px;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100%;
-  position: relative;
-  z-index: 1;
-  color: white;
-  text-align: center;
-  padding: 20px;
-  min-height:400px;
+  display: flex;
+  flex-direction: column;
 }
 
-body 
+.upper {
+  flex: 5;
+  display: flex;
+  justify-content: end; 
+  align-items: start; 
+}
+
+.lower {
+  flex: 1;
+  display: flex;
+  align-content: center;
+  justify-content: center
+}
+
+.lien {
+  color: #e43c45;
+  margin: 16px;
+  font-family: "Bodoni Moda", serif;
+  font-weight: 900;
+  font-style: normal;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+.lien:hover {
+    border-top: 2px solid #a41018;
+    border-bottom: 2px solid #a41018;
+    cursor: pointer;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
 
 .titre {
   font-size: 45px;
@@ -46,23 +76,79 @@ body
   font-style: normal;
   margin-top: 5%;
   margin-right: 5%;
-  text-align:center;
-}
-.super-grand-titre {
-    font-size: 4em;
-    font-weight: bold;
-    color: #b8860b; 
-}
-.color {
-   color: #b8860b; 
+  color: white
 }
 
- background-size: cover;
-            background-position: center;
-            filter: blur(8px);
-  z-index: -1;
-   position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+h2 {
+  color: #a41018; 
+  font-size: 24px;
+}
+
+p {
+  line-height: 1.6;
+  color: white;
+  text-align: justify;
+}
+
+.highlight {
+  font-weight: bold;
+  color: #a41018; 
+}
+
+body
+{
+  background-color:black;
+  font-family:"Courier",serif;
+  margin: 0
+}
+
+td
+{
+  color:white;
+}
+
+.prop
+{
+  color:white;
+}
+
+.link
+{
+  color:red;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse; /* Fusionne les bordures des cellules */
+  font-family: Arial, sans-serif;
+  color: #333; /* Couleur du texte */
+}
+
+th, td {
+  padding: 12px 15px; /* Espacement interne des cellules */
+  text-align: left; /* Alignement du texte à gauche */
+  border-bottom: 1px solid white; /* Ligne blanche en bas de chaque cellule */
+}
+
+th {
+  background-color: #444; /* Couleur de fond de l'en-tête */
+  color: white; /* Couleur du texte de l'en-tête */
+  font-weight: bold; /* Texte en gras pour les en-têtes */
+}
+
+tr:hover {
+  background-color: #b8870b7e; /* Changement de couleur au survol */
+}
+
+/* Optionnel : Ajouter une bordure autour du tableau */
+table {
+  border: 1px solid white;
+}
+
+li {
+  color: white
+}
+
+img {
+  border-radius: 4px;
+}
