--- a/Titan.css
+++ b/Titan.css
@@ -1,4 +1,3 @@
-
 .container {
   display: flex;
   flex-direction: column;
@@ -29,7 +28,7 @@ a:hover {
 
 
 .header {
-  background-image: URL("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titan.webp?v=1739306545675");
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), URL("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titan.webp?v=1739306545675");
   height: 300px;
   background-size: cover;
   background-position: center;
@@ -49,7 +48,7 @@ a:hover {
   flex: 1;
   display: flex;
   align-content: center;
-  justify-content: center
+  justify-content: center;
 }
 
 .lien {
@@ -58,12 +57,16 @@ a:hover {
   font-family: "Bodoni Moda", serif;
   font-weight: 900;
   font-style: normal;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .lien:hover {
     border-top: 2px solid #478dd4;
     border-bottom: 2px solid #478dd4;
-    cursor: pointer
+    cursor: pointer;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 .titre {
