--- a/titanic.css
+++ b/titanic.css
@@ -23,7 +23,7 @@ a:hover {
 
 
 .header {
-  background-image: URL("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Titanic_01.jpg?v=1739306737039");
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), URL("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Titanic_01.jpg?v=1739306737039");
   height: 300px;
   background-size: cover;
   background-position: center;
@@ -57,12 +57,15 @@ a:hover {
   font-family: "Bodoni Moda", serif;
   font-weight: 900;
   font-style: normal;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .lien:hover {
     border-top: 2px solid #b8860b;
     border-bottom: 2px solid #b8860b;
-    cursor: pointer
+    cursor: pointer;
+    padding: 0
 }
 
 .titre {
@@ -76,7 +79,7 @@ a:hover {
 
 h2 {
   color: #b8860b; 
-  font-size: 24px;
+  font-size: 32px;
 }
 
 p
@@ -121,6 +124,7 @@ table {
   border-collapse: collapse; /* Fusionne les bordures des cellules */
   font-family: Arial, sans-serif;
   color: #333; /* Couleur du texte */
+  border: 1px solid white;
 }
 
 th, td {
@@ -137,9 +141,4 @@ th {
 
 tr:hover {
   background-color: #b8870b7e; /* Changement de couleur au survol */
-}
-
-/* Optionnel : Ajouter une bordure autour du tableau */
-table {
-  border: 1px solid white;
 }
