--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ a {
 
 header
 {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)), url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/fond.avif?v=1740608006601");
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 1) 85%), url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/fond.avif?v=1740608006601");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
