--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ a {
 
 header
 {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)), url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/fond.avif?v=1740608006601");
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 1) 85%), url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/fond.avif?v=1740608006601");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -133,7 +133,7 @@ body
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.6);
   border-radius: 4px;
   z-index: 1;
 }
@@ -144,7 +144,7 @@ body
 }
 
 .pt {
-  background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanicolympique.jpg?v=1740506702836");
+  background-image:url("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/rms.webp?v=1740912312935");
   gap:60px;
 }
 
