--- a/page-minerve.css
+++ b/page-minerve.css
@@ -1,48 +1,153 @@
-.rechercheP1
-{
+.container {
   display: flex;
-  align-items: flex-start;
-  max-width: 1320px;
-  flex-direction:linear;
-  gap:20px;
-  justify-content:center;
-}
-.rechercheP2
-{
-  display:flex;
-  align-items:flex-start;
-  background-color:#f0c653;
-  color:#f3f3f3;
-  padding:10px;
-  min-width:10px;
-  min-height:10px;
-  margin-top:20px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  
+  flex-direction: column;
 }
 
-header
-{
-  background-image:url("");
+.container-body {
+  margin-left: 15%;
+  margin-right: 15%;
+  display: flex;
+  flex-direction: column;
+}
+
+a {
+  text-decoration: none; 
+  color: inherit;         
+  cursor: pointer;        
+}
+
+a:hover {
+  text-decoration: none; 
+  color: inherit;            
+}
+
+.home {
+  margin-top: 1%;
+  margin-left: 2%
+}
+
+.header {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), URL("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/minerve_postcard.webp?v=1740913065097");
+  height: 300px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100%;
-  
-  background-color:pink;
-  min-height:250px;
+  display: flex;
+  flex-direction: column;
 }
 
-body
-{
-  
+.upper {
+  flex: 5;
+  display: flex;
+  justify-content: end; 
+  align-items: start; 
 }
+
+.lower {
+  flex: 1;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.lien {
+  color: #4774d4;
+  margin: 16px;
+  font-family: "Bodoni Moda", serif;
+  font-weight: 900;
+  font-style: normal;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+.lien:hover {
+    border-top: 2px solid #4774d4;
+    border-bottom: 2px solid #4774d4;
+    cursor: pointer;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
 .titre {
   font-size: 45px;
   font-family: "Bodoni Moda", serif;
   font-weight: 600;
   font-style: normal;
   margin-top: 5%;
-  margin-right: 5%
+  margin-right: 5%;
+  color: white
+}
+
+h2 {
+  color: #4774d4; 
+  font-size: 24px;
+}
+
+h3 {
+  color: #4774d4;
+  font-size: 18px;
+}
+
+p {
+  line-height: 1.6;
+  color: white;
+  text-align: justify;
+}
+
+.highlight {
+  font-weight: bold;
+  color: #4774d4; 
+}
+
+body {
+  background-color: black;
+  font-family: "Courier", serif;
+  margin: 0;
+}
+
+td {
+  color: white;
+}
+
+.prop {
+  color: white;
+}
+
+.link {
+  color: blue;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+  color: #333;
+}
+
+th, td {
+  padding: 12px 15px;
+  text-align: left;
+  border-bottom: 1px solid white;
+}
+
+th {
+  background-color: #444;
+  color: white;
+  font-weight: bold;
+}
+
+tr:hover {
+  background-color: #1a478d7e;
+}
+
+table {
+  border: 1px solid white;
+}
+
+li {
+  color: white;
+}
+
+img {
+  border-radius: 4px;
 }
