--- a/titanic.css
+++ b/titanic.css
@@ -23,7 +23,7 @@ a:hover {
 
 
 .header {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), URL("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Titanic_01.jpg?v=1739306737039");
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), URL("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Titanic_01.jpg?v=1739306737039");
   height: 300px;
   background-size: cover;
   background-position: center;
